[package]
name = "naive-rabin-cryptosystem"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4.6", features = ["rand", "default"] }
num-traits = "0.2.19"
num-integer = "0.1.46"
num-prime = "0.4.4"
rand = "0.8.5"
rayon = "1.10.0"
log = "0.4"
env_logger = "0.11.5"
base64 = "0.22.1"
